fix display overflow

--- a/src/components/display/display.module.scss
+++ b/src/components/display/display.module.scss
@@ -12,22 +12,27 @@
   padding: 1rem;
 
   .operationList {
+    overflow-x: scroll;
+    width: 100%;
     font-size: 1.2rem;
     font-weight: 500;
     color: #fff;
     text-align: right;
     overflow: hidden;
-    text-overflow: ellipsis;
+    // text-overflow: ellipsis;
     white-space: nowrap;
   }
 
   .currentItem {
-    font-size: 4rem;
+    font-size: 3.74rem;
     font-weight: 700;
     color: #fff;
     text-align: right;
     overflow: hidden;
-    text-overflow: ellipsis;
+    // text-overflow: ellipsis;
     white-space: nowrap;
+    overflow-x: scroll;
+    width: 100%;
+    height: 68%;
   }
 }
